# python-twitter-api

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/: connections.py  services.py
tests/: test_service.py
