[tool.poetry]
name = "python-twitter-api"
version = "0.1.0"
description = "Twitter (X) API Consume App"
authors = ["Gus Prado <49629739+GusPrado@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tweepy = "^4.14.0"
pymongo = "^4.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
